src/core/styles/components/grid/_grid-theme.scss
$component-name: 'igx-grid';

$components: register-component($components, #{$component-name});

@function igx-grid-theme(
    $background: null,
    $cell-text-color: null,
    $heading-text-color: null,
    $row-border-color: null,
    $row-hover-background: null,
    $row-selected-background: null,
    $row-selected-text-color: null,
    $cell-selected-background: null,
    $cell-selected-text-color: null
) {

    @if (
        not($cell-text-color)
        or $cell-text-color != igx-color($default-palette, 'grays', 800))
        and $background {
        $cell-text-color: text-contrast($background);
    }

    @if (
        not($cell-selected-text-color)
        or $cell-selected-text-color != igx-contrast-color($default-palette, 'accent'))
        and $cell-selected-background {
        $cell-selected-text-color: text-contrast($cell-selected-background);
    }

    @if (
        not($row-selected-text-color)
        or $row-selected-text-color != igx-color($default-palette, 'grays', 900))
        and $row-selected-background {
        $row-selected-text-color: text-contrast($row-selected-background);
    }

    @return (
        background: $background,
        cell-text-color: $cell-text-color,
        heading-text-color: $heading-text-color,
        row-border-color: $row-border-color,
        row-hover-background: $row-hover-background,
        row-selected-background: $row-selected-background,
        row-selected-text-color: $row-selected-text-color,
        cell-selected-background: $cell-selected-background,
        cell-selected-text-color: $cell-selected-text-color
    );
}

@mixin igx-grid($theme, $palette: $default-palette) {
    $default-theme: igx-grid-theme(
        $background: $white,
        $cell-text-color: igx-color($palette, 'grays', 800),
        $heading-text-color: igx-color($palette, 'grays', 600),
        $row-border-color: igx-color($palette, 'grays', 300),
        $row-hover-background: igx-color($palette, 'grays', 100),
        $row-selected-background: igx-color($palette, 'grays', 900),
        $row-selected-text-color: igx-contrast-color($palette, 'grays', 900),
        $cell-selected-background: igx-color($palette, 'accent'),
        $cell-selected-text-color: igx-contrast-color($palette, 'accent')
    );

    $this: extend($default-theme, $theme);

    // @debug $this;

    // General
    $grid-bg: map-get($this, 'background') !default;
    $grid-br: em(2px) !default;
    $grid-shadow: $elevate-2 !default;

    // Caption
    $grid-caption-fs: em(20px) !default;
    $grid-caption-lh: em(32px) !default;
    $grid-caption-padding: em(16px) em(24px) !default;

    // Heading
    $grid-head-fs: em(12px) !default;
    $grid-head-fw: 600 !default;
    $grid-head-color: map-get($this, 'heading-text-color') !default;
    $grid-head-icon-size: rem(16px) !default;
    $grid-head-icon-lh: rem(16px) !default;
    $grid-head-icon-padding: em(8px) !default;

    // Row
    $grid-row-bg: inherit !default;
    $grid-row-bg-selected: map-get($this, 'row-selected-background') !default;
    $grid-row-color-selected: map-get($this, 'row-selected-text-color') !default;
    $grid-row-bb: 1px solid igx-color($palette, 'grays', 300) !default;
    $grid-row-hover: $off-white !default;
    $grid-row-transition: none !default;

    // Cell
    $grid-cell-padding: rem(16px) rem(24px) !default;
    $grid-cell-align-num: right !default;
    $grid-cell-fs: rem(13px) !default;
    $grid-cell-lh: rem(16px) !default;
    $grid-cell-color: map-get($this, 'cell-text-color') !default;
    $grid-cell-selected-bg: map-get($this, 'cell-selected-background') !default;
    $grid-cell-selected-color: map-get($this, 'cell-selected-text-color') !default;

    %grid-display {
        display: grid;
        grid-template-rows: min-content;
        background: $grid-bg;
        color: $grid-cell-color;
        border-radius: $grid-br;
        box-shadow: $grid-shadow;
        outline-style: none;
        overflow: visible;
    }

    %grid-caption {
        display: flex;
        align-items: center;
        font-size: $grid-caption-fs;
        line-height: $grid-caption-lh;
        padding: $grid-caption-padding;
    }

    %grid-thead i {
        font-size: $grid-head-icon-size;
    }

    %grid-thead,
    %grid-tfoot {
        display: block;
        // margin-right: 16px;

        %grid-row {
            &:hover {
                background-color: transparent;
            }
        }
    }

    %grid-tbody {
        position: relative;
        overflow: hidden;
        will-change: transform;
    }

    %grid-tbody--empty {
        display: flex;
        justify-content: center;
        text-align: center;
    }

    %grid-row {
        display: flex;
        background: $grid-row-bg;
        border-bottom: $grid-row-bb;
        outline-style: none;

        &:last-of-type {
            border-bottom: 0;
        }

        &:hover {
            background: $grid-row-hover;
        }
    }

    %grid-row--selected {
        color: $grid-row-color-selected;
        background-color: $grid-row-bg-selected;
        border-bottom: 1px solid rgba(0, 0, 0, 0);
        box-shadow: inset 0 3px 1px rgba(0, 0, 0, .08);

        &:hover {
            background: $grid-row-bg-selected;
        }
    }

    %grid-cell-display {
        flex: 1;
        outline-style: none;
        padding: $grid-cell-padding;
        font-size: $grid-cell-fs;
        line-height: $grid-cell-lh;
        color: inherit;
        text-align: left;
        overflow: hidden;
        white-space: nowrap;
        text-overflow: ellipsis;
    }

    %grid-cell--fixed-width {
        flex-grow: 0;
    }

    %grid-cell-number {
        text-align: $grid-cell-align-num;
    }

    %grid-cell--selected {
        color: $grid-cell-selected-color;
        background-color: $grid-cell-selected-bg !important;
        border-bottom: 0;
        margin-bottom: -1px;
        box-shadow: inset 0 3px 1px rgba(0, 0, 0, .12);
        z-index: 10;
    }

    %grid-cell-header {
        display: flex;
        position: relative;
        flex-flow: row nowrap;
        align-items: center;
        justify-content: space-between;
        font-size: $grid-head-fs;
        font-weight: $grid-head-fw;
        overflow: visible;
        min-width: 0;

        &.title {
            cursor: pointer;
            overflow: hidden;
            white-space: nowrap;
            text-overflow: ellipsis;
            user-select: none;
        }
    }
}

